<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about"
    android:background="@drawable/home_bg">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/about_us"
        app:titleCentered="true"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Scroll Content -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/aboutToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/medicine_logo"
                android:contentDescription="@string/app_logo"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:text="@string/app_name"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

            <TextView
                android:text="@string/app_tagline"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/about_app"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/about_app_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginBottom="12dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/key_features"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/key_features_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginBottom="12dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/developed_as"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/developed_as_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginBottom="12dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/contact"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/contact_email"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
